# pdg2025-fcen-uba-TP-2

./: .gitignore  LICENSE  README.md
assets/: assets.qrc
forms/: GuiMainWindow.ui  GuiToolsWidget.ui
qt/: DGP2025-A2.pri  DGP2025-A2.pro
src/: CMakeLists.txt
src/core/: CMakeLists.txt  Edges.cpp  Edges.hpp  Faces.cpp  Faces.hpp  Graph.cpp  Graph.hpp  HalfEdges.cpp  HalfEdges.hpp  Partition.cpp  Partition.hpp  PolygonMesh.cpp  PolygonMesh.hpp  PolygonMeshTest.cpp  PolygonMeshTest.hpp
src/gui/: GuiAboutDialog.cpp  GuiAboutDialog.hpp  GuiGLBuffer.cpp  GuiGLBuffer.hpp  GuiGLHandles.cpp  GuiGLHandles.hpp  GuiGLShader.cpp  GuiGLShader.hpp  GuiGLWidget.cpp  GuiGLWidget.hpp  GuiMainWindow.cpp  GuiMainWindow.hpp  GuiQtLogo.cpp  GuiQtLogo.hpp  GuiStrings.hpp  GuiToolsWidget.cpp  GuiToolsWidget.hpp  GuiViewerApp.cpp  GuiViewerData.cpp  GuiViewerData.hpp
src/io/: AppLoader.cpp  AppLoader.hpp  AppSaver.cpp  AppSaver.hpp  CMakeLists.txt  Loader.hpp  LoaderPly.cpp  LoaderPly.hpp  LoaderStl.cpp  LoaderStl.hpp  LoaderWrl.cpp  LoaderWrl.hpp  Saver.hpp  SaverPly.cpp  SaverPly.hpp  SaverStl.cpp  SaverStl.hpp  SaverWrl.cpp  SaverWrl.hpp  StrException.hpp  Tokenizer.cpp  Tokenizer.hpp  TokenizerFile.cpp  TokenizerFile.hpp  TokenizerString.cpp  TokenizerString.hpp
src/test/: CMakeLists.txt  dgpPrt.cpp  dgpPrt.hpp  dgpTest2a.cpp  dgpTest2b.cpp  dgpTest2c.cpp
src/util/: BBox.cpp  BBox.hpp  CMakeLists.txt  CastMacros.hpp  Endian.cpp  Endian.hpp  StaticRotation.cpp  StaticRotation.hpp
src/wrl/: Appearance.cpp  Appearance.hpp  CMakeLists.txt  Group.cpp  Group.hpp  ImageTexture.cpp  ImageTexture.hpp  IndexedFaceSet.cpp  IndexedFaceSet.hpp  IndexedFaceSetPly.cpp  IndexedFaceSetPly.hpp  IndexedLineSet.cpp  IndexedLineSet.hpp  Material.cpp  Material.hpp  Node.cpp  Node.hpp  PixelTexture.cpp  PixelTexture.hpp  Ply.cpp  Ply.hpp  Rotation.cpp  Rotation.hpp  SceneGraph.cpp  SceneGraph.hpp  SceneGraphProcessor.cpp  SceneGraphProcessor.hpp  SceneGraphTraversal.cpp  SceneGraphTraversal.hpp  Shape.cpp  Shape.hpp  Transform.cpp  Transform.hpp
